--- a/TeamsSampleHub/SampleHubHTMLCSSVersion/SampleHub/Source/appsettings.json
+++ b/TeamsSampleHub/SampleHubHTMLCSSVersion/SampleHub/Source/appsettings.json
@@ -1,12 +1,12 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "[AzureAD Tenant Id]",
-    "ClientId": "[AzureAD Client Id]",
-    "ApplicationIdURI": "[AzureAD Application Id URI]",
-    "AppSecret": "[Azure App secret]",
+    "TenantId": "4b4d0184-d0c2-4adf-9c66-7127d7888210",
+    "ClientId": "155c77d0-0396-4307-809a-f25852dece6e",
+    "ApplicationIdURI": "api://healthhub.contoso.xyz/155c77d0-0396-4307-809a-f25852dece6e",
+    "AppSecret": ".b--L9x1.mEVeMshm3tF6xeh03ikDdHwu3",
     "AuthUrl": "/oauth2/v2.0/token",
-    "ValidIssuers": "https://login.microsoftonline.com/TENANT_ID/v2.0,https://sts.windows.net/TENANT_ID/"
+    "ValidIssuers": "https://login.microsoftonline.com/4b4d0184-d0c2-4adf-9c66-7127d7888210/v2.0,https://sts.windows.net/4b4d0184-d0c2-4adf-9c66-7127d7888210/"
   },
   "Logging": {
     "LogLevel": {
@@ -16,39 +16,39 @@
     }
   },
   "AllowedHosts": "*",
-  "AzureClientId": "[AzureAD Client Id]",
-  "SharePointClientId": "[SharePoint client Id]",
-  "AppSecret": "[SharePoint client secret]",
-  "Resource": "[SharePoint resource]",
-  "ListId": "[SharePoint News web part list id]",
-  "StorageTableEndPoint": "[Company communicator's Notification table Shared access signature URL]",
-  "TenantSharePointSiteUrl": "[SharePoint news web part's  site URL]",
-  "BaseUrl": "[App service base URL]",
+  "AzureClientId": "155c77d0-0396-4307-809a-f25852dece6e",
+  "SharePointClientId": "ca5fe30a-5cea-4695-be8e-60153dd5bdca@4b4d0184-d0c2-4adf-9c66-7127d7888210",
+  "AppSecret": "Sx8iQWdd0ztd9xVrEEKMK86S5Z3y2XoXH9jMP6PMsjw%3D",
+  "Resource": "00000003-0000-0ff1-ce00-000000000000/m365x198847.sharepoint.com@4b4d0184-d0c2-4adf-9c66-7127d7888210",
+  "ListId": "8356c299-016f-4847-aca2-48c8210fcbd2",
+  "StorageTableEndPoint": "https://lgrg37wfauawg.table.core.windows.net/NotificationData?sv=2019-12-12&ss=t&srt=o&sp=r&se=2021-11-04T03:20:34Z&st=2020-10-09T19:20:34Z&sip=0.0.0.0-255.255.255.255&spr=https,http&sig=wReel30c%2Ba0xjo9y3p5enuUB9lTyGlLr3mhTwnjcR5o%3D",
+  "TenantSharePointDomain": "https://m365x198847.sharepoint.com",
+  "BaseUrl": "healthhub.contoso.xyz",
   "GroupsEndPoint": "https://graph.microsoft.com/v1.0/groups/",
-  "TeamId": "[Team ID for getting the shifts, members information]",
+  "TeamId": "c866ca0b-0cca-4c61-a0e0-bb5927f90364",
   "TeamMembersCount": 8,
   "UsersEndPoint": "https://graph.microsoft.com/v1.0/users/",
   "TeamsConfiguration": {
     "DeepLinkBaseUrl": "https://teams.microsoft.com/l/entity/",
-    "TrainingVideoUrl": "[Video Stream URL]",
-    "ChannelChatUrl": "[Channel URL]",
-    "ShiftsAppId": "[Shifts app id]",
-    "TasksAppId": "[Tasks app id]",
-    "NewsAppId": "[News app id]",
-    "PayStubsAppId": "[Paystubs app id]",
-    "BenefitsAppId": "[Benefits app id]",
-    "RewardsAppId": "[Rewards app id]",
-    "KudosAppId": "[Kudos app id]",
-    "SurveyAppId": "[Survey app id]",
-    "SupportAppId": "[Support app id]",
-    "TrainingAppId": "[Training app id]",
-    "PortalAppId": "[Portal app id]",
-    "InsightsAppId": "[Insights app id]",
-    "ReportAppId": "[Report app id]",
-    "HandBookUrl": "[Handbook URL]"
+    "TrainingVideoUrl": "",
+    "ChannelChatUrl": "",
+    "ShiftsAppId": "42f6c1da-a241-483a-a3cc-4f5be9185951",
+    "TasksAppId": "com.microsoft.teamspace.tab.planner",
+    "NewsAppId": "a16e6ed7-d9ee-4589-b452-7f245a8caef3",
+    "PayStubsAppId": "da9fb735-61a5-4e2c-9aad-479e5e97b8ee",
+    "BenefitsAppId": "b32a2a62-3e7f-4307-af70-97d6befb0aed",
+    "RewardsAppId": "03c89617-46ea-4054-a056-3f0ef7b46251",
+    "KudosAppId": "a16e6ed7-d9ee-4589-b452-7f245a8caef3",
+    "SurveyAppId": "a16e6ed7-d9ee-4589-b452-7f245a8caef3",
+    "SupportAppId": "",
+    "TrainingAppId": "",
+    "PortalAppId": "",
+    "InsightsAppId": "",
+    "ReportAppId": "",
+    "TeamId": "",
+    "HandBookUrl": ""
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "[Application Insights Instrumentation Key]"
+    "InstrumentationKey": ""
   }
-
 }
