--- a/TeamsSampleHub/SampleHubReactVersion/SampleHubApi/appsettings.json
+++ b/TeamsSampleHub/SampleHubReactVersion/SampleHubApi/appsettings.json
@@ -1,10 +1,10 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "",
-    "ClientId": "",
-    "ApplicationIdURI": "",
-    "AppSecret": "",
+    "TenantId": "4b4d0184-d0c2-4adf-9c66-7127d7888210",
+    "ClientId": "155c77d0-0396-4307-809a-f25852dece6e",
+    "ApplicationIdURI": "155c77d0-0396-4307-809a-f25852dece6e",
+    "AppSecret": ".b--L9x1.mEVeMshm3tF6xeh03ikDdHwu3",
     "AuthUrl": "/oauth2/v2.0/token",
     "ValidIssuers": "https://login.microsoftonline.com/TENANT_ID/v2.0,https://sts.windows.net/TENANT_ID/"
   },
@@ -16,24 +16,24 @@
     }
   },
   "AllowedHosts": "*",
-  "AzureClientId": "",
-  "SharePointClientId": "",
-  "AppSecret": "",
-  "Resource": "",
-  "ListId": "",
-  "StorageTableEndPoint": "",
-  "TenantSharePointDomain": "https://contosotown.sharepoint.com",
-  "BaseUrl": "update your baseurl",
-  "GroupsEndPoint": "https://graph.microsoft.com/v1.0/groups/", 
-  "TeamId": "",
+  "AzureClientId": "155c77d0-0396-4307-809a-f25852dece6e",
+  "SharePointClientId": "ca5fe30a-5cea-4695-be8e-60153dd5bdca",
+  "AppSecret": "Sx8iQWdd0ztd9xVrEEKMK86S5Z3y2XoXH9jMP6PMsjw%3D",
+  "Resource": "00000003-0000-0ff1-ce00-000000000000/m365x198847.sharepoint.com@4b4d0184-d0c2-4adf-9c66-7127d7888210",
+  "ListId": "8356c299-016f-4847-aca2-48c8210fcbd",
+  "StorageTableEndPoint": "https://lgrg37wfauawg.table.core.windows.net/NotificationData?sv=2019-12-12&ss=t&srt=o&sp=r&se=2021-11-04T03:20:34Z&st=2020-10-09T19:20:34Z&sip=0.0.0.0-255.255.255.255&spr=https,http&sig=wReel30c%2Ba0xjo9y3p5enuUB9lTyGlLr3mhTwnjcR5o%3D",
+  "TenantSharePointDomain": "https://m365x198847.sharepoint.com",
+  "BaseUrl": "samplehubzanre.azurewebsites.net",
+  "GroupsEndPoint": "https://graph.microsoft.com/v1.0/groups/",
+  "TeamId": "c866ca0b-0cca-4c61-a0e0-bb5927f90364",
   "TeamMembersCount": 8,
   "UsersEndPoint": "https://graph.microsoft.com/v1.0/users/",
   "TeamsConfiguration": {
     "DeepLinkBaseUrl": "https://teams.microsoft.com/l/entity/",
     "TrainingVideoUrl": "",
     "ChannelChatUrl": "",
-    "ShiftsAppId": "",
-    "TasksAppId": "",
+    "ShiftsAppId": "42f6c1da-a241-483a-a3cc-4f5be9185951",
+    "TasksAppId": "com.microsoft.teamspace.tab.planner",
     "NewsAppId": "",
     "PayStubsAppId": "",
     "BenefitsAppId": "",
